--- a/_layouts/safelink.html
+++ b/_layouts/safelink.html
@@ -222,7 +222,7 @@ textarea {
     <li style="color:#FFF">Loadbalance</li>
     <li style="color:#FFF">Pisah Trafik</li>
     <li style="color:#FFF">Edit Template</li>
-    <li style="color:#FFF">Build Openwrt</li>
+    <li style="color:#FFF">Hotspot dan PPPoe</li>
     </span></td>
     </span></td>
   </tr>
@@ -232,38 +232,38 @@ textarea {
     <td class="tg-7k2u"><span style="color:#FFF">
     <li style="color:#FFF">Loadbalance</li>
     <li style="color:#FFF">Pisah Trafik</li>
-    <li style="color:#FFF">Edit Template</li>
-    <li style="color:#FFF">Build Openwrt</li>
+    <li style="color:#FFF">Provider</li>
+    <li style="color:#FFF">Membuat config</li>
     </span></td>
   </tr>
   <tr>
     <td class="tg-7k2u"><span style="color:#FFF">Kamis</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">Antenna</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">
-    <li style="color:#FFF">Loadbalance</li>
-    <li style="color:#FFF">Pisah Trafik</li>
-    <li style="color:#FFF">Edit Template</li>
-    <li style="color:#FFF">Build Openwrt</li>
+    <li style="color:#FFF">Pembuatan Yagi</li>
+    <li style="color:#FFF">Pembuatan Directional</li>
+    <li style="color:#FFF">Pembuatan Omni</li>
+    <li style="color:#FFF">Pembuatan Booster</li>
     </span></td>
   </tr>
   <tr>
     <td class="tg-7k2u"><span style="color:#FFF">Jum'at</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">Youtube</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">
-    <li style="color:#FFF">Loadbalance</li>
-    <li style="color:#FFF">Pisah Trafik</li>
-    <li style="color:#FFF">Edit Template</li>
-    <li style="color:#FFF">Build Openwrt</li>
+    <li style="color:#FFF">SEO</li>
+    <li style="color:#FFF">Menarik minat Pengunjung</li>
+    <li style="color:#FFF">Skill Tumbnail</li>
+    <li style="color:#FFF">Skill Editor</li>
     </span></td>
   </tr>
   <tr>
     <td class="tg-7k2u"><span style="color:#FFF">Sabtu</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">Blog</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">
-    <li style="color:#FFF">Loadbalance</li>
-    <li style="color:#FFF">Pisah Trafik</li>
-    <li style="color:#FFF">Edit Template</li>
-    <li style="color:#FFF">Build Openwrt</li>
+    <li style="color:#FFF">SEO</li>
+    <li style="color:#FFF">Backlink</li>
+    <li style="color:#FFF">Membuat Website</li>
+    <li style="color:#FFF">Membuat Template</li>
     </span></td>
   </tr>
 </tbody>
