--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -94,7 +94,19 @@ post_class: post-template
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script><br>  
-            
+<center><h5><span>Donasi ID Tech Channel</span></h5></center>
+<div style="text-align: center;position:center;">
+<button onclick="feed('{{ site.baseurl }}/feed.xml')" style="background:teal;color:white">Feed</button>
+<button onclick="sitemap('{{ site.baseurl }}/sitemap.xml')" style="background:grey;color:white">Sitemap</button>
+</div>
+<script>
+    function feed (url) {
+        location.href = url;
+    }
+    function sitemap (url) {
+        location.href = url;
+    }
+</script>            
              <!-- Author Box -->
                 {% if page.author %}				
 				<div class="row post-top-meta">
