--- a/_includes/donate.html
+++ b/_includes/donate.html
@@ -1,15 +1,15 @@
 <center><h5><span>Donasi ID Tech Channel</span></h5></center>
 <div style="text-align: center;position:center;">
-<button onclick="sociabuzz('')" style="background:teal;color:white">SociaBuzz</button>
-<button onclick="saweria('')" style="background:grey;color:white">Saweria</button>
-<button onclick="kofi('')" style="background:darkgreen;color:white">Ko-Fi</button>
-<button onclick="paypal('')" style="background:darkblue;color:white">Paypal</button>
+<button onclick="sociabuzz('https://sociabuzz.com/master_wifi_network_solution/tribe')" style="background:teal;color:white">SociaBuzz</button>
+<button onclick="saweria('https://saweria.co/masterwifi99')" style="background:grey;color:white">Saweria</button>
+<button onclick="kofi('https://ko-fi.com/masterwifinetworksolution')" style="background:darkgreen;color:white">Ko-Fi</button>
+<button onclick="paypal('https://paypal.me/myarachma92?country.x=ID&locale.x=id_ID')" style="background:darkblue;color:white">Paypal</button>
 </div>
 <div style="text-align: center;position:center;">
 <button onclick="shopeepay('')" style="background:orange;color:white">ShopeePay</button>
 <button onclick="dana('')" style="background:lightblue;color:white">Dana</button>
-<button onclick="bank('')" style="background:green;color:white">Bank</button>
-<button onclick="pulsa('')" style="background:lime;color:white">Pulsa</button>
+<button onclick="bank('/donate-bank')" style="background:green;color:white">Bank</button>
+<button onclick="pulsa('')" style="background:lime;color:white">087714249731</button>
 </div>
 <script>
     function sociabuzz (url) {
