--- a/_includes/donate.html
+++ b/_includes/donate.html
@@ -6,9 +6,9 @@
 <button onclick="paypal('https://paypal.me/myarachma92?country.x=ID&locale.x=id_ID')" style="background:darkblue;color:white">Paypal</button>
 </div>
 <div style="text-align: center;position:center;">
-<button onclick="shopeepay('')" style="background:orange;color:white">ShopeePay</button>
+<button onclick="shopeepay('https://wsa.wallet.airpay.co.id/qr/002c19e25dbcb7e4b208?smtt=0.0.9')" style="background:orange;color:white">ShopeePay</button>
 <button onclick="dana('')" style="background:lightblue;color:white">Dana</button>
-<button onclick="bank('/donate-bank')" style="background:green;color:white">Bank</button>
+<button onclick="bank('/donate-bank/')" style="background:green;color:white">Bank</button>
 <button onclick="pulsa('')" style="background:lime;color:white">087714249731</button>
 </div>
 <script>
