--- a/_includes/donate.html
+++ b/_includes/donate.html
@@ -9,7 +9,7 @@
 <button onclick="shopeepay('https://wsa.wallet.airpay.co.id/qr/002c19e25dbcb7e4b208?smtt=0.0.9')" style="background:orange;color:white">ShopeePay</button>
 <button onclick="dana('')" style="background:lightblue;color:white">Dana</button>
 <button onclick="bank('/donate-bank/')" style="background:green;color:white">Bank</button>
-<button onclick="pulsa('')" style="background:lime;color:white">087714249731</button>
+<button onclick="pulsa('/donate-pulsa/')" style="background:lime;color:white">Pulsa</button>
 </div>
 <script>
     function sociabuzz (url) {
