--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -144,7 +144,7 @@ gtag('config', '{{site.ganalytics}}');
        Copyright ©2018-2023 {{site.title}}. All rights reserved.
     </div>
 </footer>
-
+{% include iklan-popup.html %}
 <!-- JavaScript
 ================================================== -->    
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>   
