--- a/_includes/iklan-popup.html
+++ b/_includes/iklan-popup.html
@@ -1,87 +1,57 @@
-<style type="text/css">
-#topbar{
-position:absolute;
-padding-left:0%;padding-top:0%;
-background-color: #fff;
-width: 250px;heigth:180px;
-visibility: hidden;
-z-index: 100;
+<style>
+#topbar {
+height:30px;
+width:auto;
+margin:0 auto;
+background: #005094 url('http://lh3.ggpht.com/_beEpWOXwLJE/TIb57Lu4fwI/AAAAAAAABE0/q7niFVRbyNE/top-toolbar.jpg');
+background-repeat:repeat-x;
+text-align:left;
+padding-top:4px;
 }
-</style> <script type="text/javascript">
-var persistclose=0 //set to 0 or 1. 1 means once the bar is manually closed, it will remain closed for browser session
-var startX = 30 //set x offset of bar in pixels
-var startY = 5 //set y offset of bar in pixels
-var verticalpos="fromtop" //enter "fromtop" or "frombottom"
-function iecompattest(){
-return (document.compatMode && document.compatMode!="BackCompat")? document.documentElement : document.body
+#adsground {
+height:auto;
+margin:0 auto;
+width: 336px;
+background:#fff;
+border-bottom:2px #005094 solid;
+border-right:2px #005094 solid;
+border-left:2px #005094 solid;
+text-align:Center;
+padding:4px;
 }
-function get_cookie(Name) {
-var search = Name + "="
-var returnvalue = "";
-if (document.cookie.length > 0) {
-offset = document.cookie.indexOf(search)
-if (offset != -1) {
-offset += search.length
-end = document.cookie.indexOf(";", offset);
-if (end == -1) end = document.cookie.length;
-returnvalue=unescape(document.cookie.substring(offset, end))
+
+
+#headlineatas {
+opacity:1.0;
+height:auto;
+width:auto;
+position:fixed;
+top:65px;
+left:170px;
+border-bottom:1px #005094 solid;
+border-bottom:0px blue solid;
+color:#333;
+padding:0px;
+z-index:1001;
+position: fixed;
+top: 50%;
+left: 50%;
+margin-top: -120px;
+margin-left: -220px;
+font-size:13px;}
+</style>
+<script type="text/javascript">
+function getValue()
+{
+document.getElementById("headlineatas").style.display = 'none';
 }
-}
-return returnvalue;
-}
-function closebar(){
-if (persistclose)
-document.cookie="remainclosed=1"
-document.getElementById("topbar").style.visibility="hidden"
-}
-function staticbar(){
-barheight=document.getElementById("topbar").offsetHeight
-var ns = (navigator.appName.indexOf("Netscape") != -1) || window.opera;
-var d = document;
-function ml(id){
-var el=d.getElementById(id);
-if (!persistclose || persistclose && get_cookie("remainclosed")=="")
-el.style.visibility="visible"
-if(d.layers)el.style=el;
-el.sP=function(x,y){this.style.left=x+"px";this.style.top=y+"px";};
-el.x = startX;
-if (verticalpos=="fromtop")
-el.y = startY;
-else{
-el.y = ns ? pageYOffset + innerHeight : iecompattest().scrollTop + iecompattest().clientHeight;
-el.y -= startY;
-}
-return el;
-}
-window.stayTopLeft=function(){
-if (verticalpos=="fromtop"){
-var pY = ns ? pageYOffset : iecompattest().scrollTop;
-ftlObj.y += (pY + startY - ftlObj.y)/8;
-}
-else{
-var pY = ns ? pageYOffset + innerHeight - barheight: iecompattest().scrollTop + iecompattest().clientHeight - barheight;
-ftlObj.y += (pY - startY - ftlObj.y)/8;
-}
-ftlObj.sP(ftlObj.x, ftlObj.y);
-setTimeout("stayTopLeft()", 5);
-}
-ftlObj = ml("topbar");
-stayTopLeft();
-}
-if (window.addEventListener)
-window.addEventListener("load", staticbar, false)
-else if (window.attachEvent)
-window.attachEvent("onload", staticbar)
-else if (document.getElementById)
-window.onload=staticbar
 </script>
-<div class="clear">
-</div>
+<div id="headlineatas">
 <div id="topbar">
-<div style="text-align: right;">
-<a href="" onclick="closebar(); return false"><img src="https://2.bp.blogspot.com/-LulegGbMOGg/WtXNoBj4ypI/AAAAAAAAC0A/mtrYswv6iTw6QD2FiGgrhAniP3N6XNMnQCLcBGAs/s1600/close2-24.png" alt="close"/></a>
-<br/><center>Klik 2x untuk menutup(x)</center>
-<center>Selamat datang di idechannel</center><br/>
+<span style="color:#fff;font-size:13px;font-weight:bold;text-shadow:black 0.1em 0.1em 0.1em;float:right;padding-top:3px;padding-right:10px"><a target="_blank" onclick="getValue()">close</a></span>
+</div>
+<div id="adsground">
+<p>
 <!-- bannerku -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -92,6 +62,6 @@ window.onload=staticbar
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<br/></p>
 </div>
-<div style="background: #fff;">
-</div></div>
+</div>
