--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,8 +13,8 @@
 </script>
     </div>
     <div class="sidebar-section">
-        <h5><span>Langganan Config</span></h5>
-        {% include newsletter.html %}
+        <h5><span>View Counter</span></h5>
+        <a href="https://info.flagcounter.com/6W0E"><img src="https://s11.flagcounter.com/count2/6W0E/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
     </div>
     <div class="sidebar-section">
         <h5><span>Advertising</span></h5>
