--- a/_includes/iklan-popup.html
+++ b/_includes/iklan-popup.html
@@ -51,7 +51,7 @@ document.getElementById("headlineatas").style.display = 'none';
 <span style="color:#fff;font-size:13px;font-weight:bold;text-shadow:black 0.1em 0.1em 0.1em;float:right;padding-top:3px;padding-right:10px"><a target="_blank" onclick="getValue()">close</a></span>
 </div>
 <div id="adsground">
-<p>Jangan lupa <a href="https://www.youtube.com/@idtechannel" target="_blank">Subscribe</a> ya bro</p><br>
+<p>Jangan lupa <a style="color:darkred" href="https://www.youtube.com/@idtechannel" target="_blank">Subscribe</a> ya bro</p>
 <p>
 <!-- bannerku -->
 <ins class="adsbygoogle"
