--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,22 +7,22 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/LAaSoL0LrYs/1920x1080')">
+      <div class="carousel-item active" style="background-image: url('https://i.ytimg.com/vi/R8gq5lr_haQ/hqdefault.jpg?sqp=-oaymwE2CNACELwBSFXyq4qpAygIARUAAIhCGAFwAcABBvABAfgBjAKAAuADigIMCAAQARhyIEcoKzAP&rs=AOn4CLDTyAJWuS3eF7eeBWl_FvJq3rzW_g')">
         <div class="carousel-caption">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5>cara mengatasi router tenda tidak tersambung internet</h5>
+          <p><a href="https://www.youtube.com/watch?v=R8gq5lr_haQ&t=64s" target="_blank">Read More</a>.</p>
         </div>
       </div>
-      <div class="carousel-item" style="background-image: url('https://source.unsplash.com/bF2vsubyHcQ/1920x1080')">
+      <div class="carousel-item" style="background-image: url('https://i.ytimg.com/vi/tr2adr_ZkMI/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLDwUjiBQT_YBVFMySBSwMnkc3a1WA')">
         <div class="carousel-caption">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <h5>mengatasi wifi tidak bisa konek ke stb openwrt</h5>
+          <p><a href="https://www.youtube.com/watch?v=tr2adr_ZkMI&t=14s" target="_blank">Read More</a>.</p>
         </div>
       </div>
-      <div class="carousel-item" style="background-image: url('https://source.unsplash.com/szFUQoyvrxM/1920x1080')">
+      <div class="carousel-item" style="background-image: url('https://i.ytimg.com/vi/z9-cAuwG8x4/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLB2rPAWAorU_M4v8O5yshsaBZMNwg')">
         <div class="carousel-caption">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>Remote openwrt dengan Zerotier</h5>
+          <p><a href="https://www.youtube.com/watch?v=z9-cAuwG8x4&t=3s" target="_blank">Read More</a>.</p>
         </div>
       </div>
     </div>
