--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,24 +5,27 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button> 
+   </div>
     <div class="carousel-inner">
       <div class="carousel-item active" style="background-image: url('https://i.ytimg.com/vi/R8gq5lr_haQ/hqdefault.jpg?sqp=-oaymwE2CNACELwBSFXyq4qpAygIARUAAIhCGAFwAcABBvABAfgBjAKAAuADigIMCAAQARhyIEcoKzAP&rs=AOn4CLDTyAJWuS3eF7eeBWl_FvJq3rzW_g')">
         <div class="carousel-caption">
-          <h5>cara mengatasi router tenda tidak tersambung internet</h5>
-          <p><a href="https://www.youtube.com/watch?v=R8gq5lr_haQ&t=64s" target="_blank">Read More</a>.</p>
+          <h5><a style="color:darkred" href="https://www.youtube.com/watch?v=R8gq5lr_haQ&t=64s" target="_blank">cara mengatasi router tenda tidak tersambung internet</a></h5>
         </div>
       </div>
       <div class="carousel-item" style="background-image: url('https://i.ytimg.com/vi/tr2adr_ZkMI/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLDwUjiBQT_YBVFMySBSwMnkc3a1WA')">
         <div class="carousel-caption">
-          <h5>mengatasi wifi tidak bisa konek ke stb openwrt</h5>
-          <p><a href="https://www.youtube.com/watch?v=tr2adr_ZkMI&t=14s" target="_blank">Read More</a>.</p>
+          <h5><a style="color:darkred" href="https://www.youtube.com/watch?v=tr2adr_ZkMI&t=14s" target="_blank">mengatasi wifi tidak bisa konek ke stb openwrt</a></h5>
         </div>
       </div>
       <div class="carousel-item" style="background-image: url('https://i.ytimg.com/vi/z9-cAuwG8x4/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLB2rPAWAorU_M4v8O5yshsaBZMNwg')">
         <div class="carousel-caption">
-          <h5>Remote openwrt dengan Zerotier</h5>
-          <p><a href="https://www.youtube.com/watch?v=z9-cAuwG8x4&t=3s" target="_blank">Read More</a>.</p>
+          <h5><a style="color:darkred" href="https://www.youtube.com/watch?v=z9-cAuwG8x4&t=3s" target="_blank">Remote openwrt dengan Zerotier</a></h5>
+        </div>
+      </div>
+      <div class="carousel-item" style="background-image: url('https://i.ytimg.com/vi/TOG-bocz8F8/hqdefault.jpg?sqp=-oaymwE2CNACELwBSFXyq4qpAygIARUAAIhCGAFwAcABBvABAfgBzgWAAoAKigIMCAAQARh_ID4oFTAP&rs=AOn4CLDwwFvm4Fyu8BFdNYZ4Ic-b-A76tw')">
+        <div class="carousel-caption">
+          <h5><a style="color:darkred" href="https://www.youtube.com/watch?v=TOG-bocz8F8" target="_blank">Cara limit bandwidht di router tenda</a></h5>
         </div>
       </div>
     </div>
