--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,11 +105,12 @@ gtag('config', '{{site.ganalytics}}');
               </li>
               {% endfor %}
             </ul>
+           </div>
           </div>
-
+         <div class="search">
         </div>
-      </nav>
-    </div>  
+       </nav>
+      </div>  
 
     
 <!-- Container
