--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -19,3 +19,24 @@ body {}
 .carousel-control-prev {
   background: transparent;
 }
+
+pre[class*="language-"] {
+  position: relative;
+  margin: 5px 0 ;
+  padding: 1.75rem 0 1.75rem 1rem;
+
+  /* more stuff */
+}
+
+pre[class*="language-"] button{
+  position: absolute;
+  top: 5px;
+  right: 5px;
+
+  /* more stuff */
+}
+
+code[class*="language-"] {
+white-space: pre-wrap;
+word-break: break-all;
+}
