--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -20,23 +20,39 @@ body {}
   background: transparent;
 }
 
-pre[class*="language-"] {
-  position: relative;
-  margin: 5px 0 ;
-  padding: 1.75rem 0 1.75rem 1rem;
+/* --- ini khusus coding --- */
 
-  /* more stuff */
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
-pre[class*="language-"] button{
+pre[class*="language-"] {
+  position: relative;
+  overflow: auto;
+
+  /* make space  */
+  margin: 5px 0;
+  padding: 1.75rem 0 1.75rem 1rem;
+  border-radius: 10px;
+}
+
+pre[class*="language-"] button {
   position: absolute;
   top: 5px;
   right: 5px;
 
-  /* more stuff */
+  font-size: 0.9rem;
+  padding: 0.15rem;
+  background-color: #828282;
+
+  border: ridge 1px #7b7b7c;
+  border-radius: 5px;
+  text-shadow: #c4c4c4 0 0 2px;
 }
 
-code[class*="language-"] {
-white-space: pre-wrap;
-word-break: break-all;
+pre[class*="language-"] button:hover {
+  cursor: pointer;
+  background-color: #bcbabb;
 }
