--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -171,6 +171,7 @@ gtag('config', '{{site.ganalytics}}');
 <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>   
 <script src="{{ site.baseurl }}/assets/js/theme.js"></script>    
 <script id="dsq-count-scr" src="//idtechannel.disqus.com/count.js" async></script>  
+<script src="{{ site.baseurl }}/assets/js/copycode.js"></script>
 </body>
     
 </html>
